[package]
name = "tasks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.10.0", features = ["debug", "advanced", "image"] }
iced_aw = {version = "0.7.0", features = ["card", "modal", "icons"]}
dirs = "5.0.1"
serde = {version = "1.0.195", features = ["derive"] }
serde_json = "1.0.110"
winapi = { version = "0.3.9", features = [] }
iced_style = "0.9.0"
